@startuml

title __CLIENT's Class Diagram__\n

  namespace com.chrisjaunes.communication.client {
    class com.chrisjaunes.communication.client.Config {
        {static} + ACCOUNT_VISITORS : String
        {static} + BUNDLE_ACCOUNT : String
        {static} + CONTACTS_FRIENDS_AGREE : String
        {static} + CONTACTS_FRIENDS_REJECT : String
        {static} + CONTACTS_FRIEND_REQUEST : String
        {static} + ERROR_AVATAR_TOO_LARGE : String
        {static} + ERROR_NET : String
        {static} + ERROR_UNKNOWN : String
        {static} + STATUS_NET_ERROR : String
        {static} + STATUS_QUERY_SUCCESSFUL : String
        {static} + STATUS_REGISTER_ACCOUNT_EXIST : String
        {static} + STATUS_REGISTER_SUCCESSFUL : String
        {static} + STATUS_UPDATE_FAIL : String
        {static} + STATUS_UPDATE_SUCCESSFUL : String
        {static} + STR_ACCOUNT : String
        {static} + STR_ACCOUNT1 : String
        {static} + STR_ACCOUNT2 : String
        {static} + STR_AVATAR : String
        {static} + STR_CONTENT : String
        {static} + STR_CONTENT_TYPE : String
        {static} + STR_NICKNAME : String
        {static} + STR_OPERATION : String
        {static} + STR_PASSWORD : String
        {static} + STR_SEND_TIME : String
        {static} + STR_STATUS : String
        {static} + STR_STATUS_DATA : String
        {static} + STR_TEXT_STYLE : String
        {static} + STR_TIME : String
        {static} + TABLE_ACCOUNT : String
        {static} + TABLE_CONTACTS : String
        {static} + URL_BASE : String
        {static} + URL_CONTACTS_QUERY : String
        {static} + URL_GROUP_MESSAGE_ADD : String
        {static} + URL_GROUP_MESSAGE_QUERY : String
        {static} + URL_LOGIN : String
        {static} + URL_REGISTER : String
        {static} + URL_TALK_QUERY : String
        {static} + URL_TALK_UPDATE : String
        {static} + URL_UPDATE_MESSAGE : String
    }
  }
  

  namespace com.chrisjaunes.communication.client {
    abstract class com.chrisjaunes.communication.client.LocalDatabase {
        {abstract} + getContactsDao()
        {abstract} + getGroupDao()
        {abstract} + getTalkMessageDao()
    }
  }
  

  namespace com.chrisjaunes.communication.client {
    class com.chrisjaunes.communication.client.MainActivity {
        {static} - MENU_AVATAR : int
        {static} - MENU_LOGOUT : int
        {static} - MENU_UPDATE_TEXT_STYLE : int
        {static} - PHOTO_REQUEST_GALLERY : int
        - radioGroupOnCheckedChangeListener : OnCheckedChangeListener
        - toolbarOnMenuItemClickListener : OnMenuItemClickListener
        + onActivityResult()
        # onCreate()
        - updateFragment()
    }
  }
  

  namespace com.chrisjaunes.communication.client {
    class com.chrisjaunes.communication.client.MyApplication {
        {static} - instance : MyApplication
        + MyApplication()
        {static} + getInstance()
        + getLocalDataBase()
        + setAccount()
    }
  }
  

  namespace com.chrisjaunes.communication.client {
    class com.chrisjaunes.communication.client.PreActivity {
        # onCreate()
    }
  }
  

  com.chrisjaunes.communication.client.LocalDatabase -up-|> androidx.room.RoomDatabase
  com.chrisjaunes.communication.client.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.chrisjaunes.communication.client.MainActivity o-- com.chrisjaunes.communication.client.account.AccountViewModel : accountViewModel
  com.chrisjaunes.communication.client.MainActivity o-- com.chrisjaunes.communication.client.contacts.AddContactsFragment : addContactsFragment
  com.chrisjaunes.communication.client.MainActivity o-- com.chrisjaunes.communication.client.group.GAddFragment : gAddFragment
  com.chrisjaunes.communication.client.MainActivity o-- com.chrisjaunes.communication.client.group.GListFragment : gListFragment
  com.chrisjaunes.communication.client.MainActivity o-- com.chrisjaunes.communication.client.contacts.NewContactsFragment : newContactsFragment
  com.chrisjaunes.communication.client.MainActivity o-- com.chrisjaunes.communication.client.contacts.NowContactsFragment : nowContactsFragment
  com.chrisjaunes.communication.client.MyApplication -up-|> android.app.Application
  com.chrisjaunes.communication.client.MyApplication o-- com.chrisjaunes.communication.client.LocalDatabase : localDatabase
  com.chrisjaunes.communication.client.PreActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
